[gd_scene load_steps=7 format=3 uid="uid://d16u2xadhx4bh"]

[ext_resource type="Theme" uid="uid://dnf5p8ny2pgfo" path="res://Scenes/Inventory/theme.tres" id="1_utars"]
[ext_resource type="Texture2D" uid="uid://ddmhcjcohjhbk" path="res://Asset/GameUI.png" id="2_cicoc"]
[ext_resource type="Script" path="res://Scenes/Inventory/item_info_display.gd" id="3_xd5nk"]
[ext_resource type="Texture2D" uid="uid://dr2c4ctdxugao" path="res://Scenes/Inventory/Asset/Armor Piercing.png" id="4_dgbf5"]
[ext_resource type="FontFile" uid="uid://dlsrnr6u4s5cy" path="res://Scenes/Inventory/fonts/PixelOperator8-Bold.ttf" id="5_kp2ne"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lcgik"]
atlas = ExtResource("2_cicoc")
region = Rect2(160, 144, 80, 112)

[node name="ItemInfoDisplay" type="NinePatchRect"]
custom_minimum_size = Vector2(450, 900)
offset_left = 544.0
offset_top = 85.0
offset_right = 994.0
offset_bottom = 985.0
theme = ExtResource("1_utars")
texture = SubResource("AtlasTexture_lcgik")
script = ExtResource("3_xd5nk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 86.0
offset_right = 405.0
offset_bottom = 810.0
theme_override_constants/separation = 20

[node name="ItemTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("4_dgbf5")
expand_mode = 4
stretch_mode = 5

[node name="TierLabel" type="Label" parent="VBoxContainer/ItemTexture"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 142.0
offset_top = 197.0
offset_right = 254.0
offset_bottom = 261.0
theme_override_font_sizes/font_size = 64
text = "+5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_kp2ne")
theme_override_font_sizes/font_size = 32
text = "Armor Piecing"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="StatLabelContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Stat1Label" type="Label" parent="VBoxContainer/StatLabelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Attack +20"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Stat2Label" type="Label" parent="VBoxContainer/StatLabelContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Piece +2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BtnDiscard" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
text = "Discard"

[connection signal="pressed" from="VBoxContainer/BtnDiscard" to="." method="_on_btn_discard_pressed"]
